Complete shift summary fragment.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,8 @@
     <color name="cayanSelection">#00D3FC</color>
     <color name="mainCayan">#03DAC5</color>
     <color name="darkestBlue">#030640</color>
+    <color name="darkBlue">#2C2F4B</color>
+    <color name="inActiveGrey">#535571</color>
 
 
 
