--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,9 @@
         android:id="@+id/bottom_navigation"
         android:layout_width="match_parent"
         android:layout_height="56dp"
-        android:background="@android:color/white"
+        android:background="@color/darkBlue"
+        app:itemTextColor="@color/bottom_navigation_color_selector"
+        app:itemIconTint="@color/bottom_navigation_color_selector"
         app:layout_constraintBottom_toBottomOf="parent"
         app:menu="@menu/menu_main" />
 </androidx.constraintlayout.widget.ConstraintLayout>
