--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -1,11 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="@string/item"
-        android:id="@+id/settings"/>
-    <item android:title="@string/item"
-        android:id="@+id/current_shift"/>
-    <item android:title="@string/item"
-        android:id="@+id/shifts"/>
+    <item
+        android:id="@+id/settings"
+        android:icon="@drawable/work"
+        android:title="@string/workplace_settings" />
+    <item
+        android:id="@+id/current_shift"
+        android:icon="@drawable/current_shift"
+        android:title="@string/current_shift" />
+    <item
+        android:id="@+id/shifts"
+        android:icon="@drawable/shifts"
+        android:title="@string/shifts" />
 </menu>
