--- a/app/src/main/res/layout/fragment_additional_hours_setting_layout.xml
+++ b/app/src/main/res/layout/fragment_additional_hours_setting_layout.xml
@@ -2,7 +2,8 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
@@ -26,14 +27,16 @@
 
     <TextView
         android:id="@+id/calculate_from"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="30sp"
+        android:layout_marginStart="24dp"
+        android:layout_marginEnd="24dp"
         android:layout_margin="24dp"
-        android:text="לא לחשב"
+        tools:text="לא לחשב"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         android:textColor="@color/white"/>
 
@@ -43,7 +46,7 @@
         android:layout_height="wrap_content"
         app:layout_constraintRight_toRightOf="parent"
         android:layout_margin="16dp"
-        android:text="שעתיים ראשונות לפי 125%, שעה שלישית ומעלה 150%"
+        android:text="@string/additional_hours_exp"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         android:textColor="@color/white"/>
 
