fix AdditionalHoursSettingFragment.kt picker setting position

--- a/app/src/main/res/layout/fragment_additional_hours_setting_layout.xml
+++ b/app/src/main/res/layout/fragment_additional_hours_setting_layout.xml
@@ -33,6 +33,7 @@
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:textSize="30sp"
+        android:gravity="center"
         android:layout_marginStart="24dp"
         android:layout_marginEnd="24dp"
         android:layout_margin="24dp"
@@ -57,7 +58,7 @@
         android:layout_height="0dp"
         app:wheel_selected_item_text_color="@color/black"
         app:wheel_visible_item_count="5"
-        app:wheel_selected_item_position="3"
+        app:wheel_selected_item_position="0"
         app:wheel_cyclic="false"
         app:wheel_curved="true"
         app:wheel_curtain="true"
