--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -21,7 +21,7 @@
         <item name="android:actionMenuTextColor">@color/white</item>
     </style>
 
-    <style name="main_activity_style" parent="android:Theme.Material.Light.NoActionBar.Fullscreen">
+    <style name="main_activity_style" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
