--- a/app/src/main/res/layout/dialog_edit_shift.xml
+++ b/app/src/main/res/layout/dialog_edit_shift.xml
@@ -151,6 +151,7 @@
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
                 android:gravity="center"
+                android:layoutDirection="ltr"
                 android:orientation="horizontal"
                 segmentedgroup:sc_border_width="2dp"
                 segmentedgroup:sc_checked_text_color="@color/primary_gray"
