--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -3,6 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/darkBlue"
     xmlns:tools="http://schemas.android.com/tools">
 
     <TextView
@@ -15,7 +16,7 @@
         tools:text="qwer"
         android:textStyle="bold"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/primary_blue"/>
+        android:background="@color/darkBlue"/>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/settings_list"
