--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -1,30 +1,61 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkBlue"
-    xmlns:tools="http://schemas.android.com/tools">
+    android:background="@color/darkestBlue">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginLeft="56dp"
+        android:src="@drawable/work_place_bg_image"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/workplace_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="120dp"
-        android:textSize="22sp"
-        android:textColor="@color/primary_light_blue"
+        android:layout_margin="16dp"
         android:gravity="center"
-        tools:text="qwer"
+        android:textColor="@color/white"
+        android:textSize="26sp"
         android:textStyle="bold"
+        android:paddingLeft="16dp"
+        android:drawablePadding="4dp"
+        android:drawableRight="@drawable/ic_white_arrow_down_24"
+        app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:background="@color/darkBlue"/>
+        tools:text="qwer" />
+
+
+    <ImageView
+        android:layout_width="40dp"
+        android:layout_height="40dp"
+        android:background="@drawable/faded_circle"
+        android:padding="8dp"
+        android:src="@drawable/ic_baseline_more_horiz_24"
+        android:layout_marginLeft="24dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintBottom_toBottomOf="@id/workplace_title"
+        app:layout_constraintTop_toTopOf="@id/workplace_title" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/settings_list"
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:layout_margin="8dp"
+        android:gravity="center"
+        android:numColumns="2"
+        app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.5"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/workplace_title" />
+        app:layout_constraintTop_toBottomOf="@+id/workplace_title"
+        app:spanCount="2"
+        tools:itemCount="24"
+        tools:listitem="@layout/single_setting_item_layout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
