--- a/app/src/main/res/layout/single_setting_item_layout.xml
+++ b/app/src/main/res/layout/single_setting_item_layout.xml
@@ -4,7 +4,9 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="8dp"
+    android:layout_marginBottom="16dp"
+    android:layout_marginStart="8dp"
+    android:layout_marginEnd="8dp"
     app:cardCornerRadius="10dp">
 
     <androidx.constraintlayout.widget.ConstraintLayout
@@ -14,7 +16,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            android:background="@color/in_activity_grey"
+            android:background="@drawable/setting_background"
             app:layout_constraintDimensionRatio="W, 1:1"
             app:layout_constraintTop_toTopOf="parent">
 
@@ -45,12 +47,13 @@
                 android:layout_height="wrap_content"
                 android:layout_marginTop="8dp"
                 android:src="@drawable/ic_arrow_back_black_24dp"
-                android:textColor="@color/white"
+                android:textColor="@android:color/white"
                 android:textSize="18sp"
+                android:fontFamily="@font/rubik_light"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/guideline"
-                app:tint="@color/primary_light_blue"
+                app:tint="@color/cayanSelection"
                 tools:text="value" />
 
             <TextView
