--- a/app/src/main/res/layout/bonus_shift_edit_item_layout.xml
+++ b/app/src/main/res/layout/bonus_shift_edit_item_layout.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     xmlns:tools="http://schemas.android.com/tools"
-    android:background="@color/primary_light_blue"
+    android:background="@color/cayanSelection"
     android:layout_height="104dp">
 
     <TextView
