--- a/app/src/main/res/layout/dialog_more_view.xml
+++ b/app/src/main/res/layout/dialog_more_view.xml
@@ -22,7 +22,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="96dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@android:color/white"
         android:padding="8dp"
         app:cardCornerRadius="8dp"
         android:alpha="0.5"
@@ -44,7 +44,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@android:color/white"
                 android:drawablePadding="8dp"
                 android:textColor="@color/black"
                 android:textStyle="bold"
@@ -62,7 +62,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@android:color/white"
         android:padding="8dp"
         android:alpha="0.5"
         app:cardCornerRadius="8dp"
@@ -84,7 +84,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@android:color/white"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
@@ -100,7 +100,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@android:color/white"
         android:alpha="0.5"
         android:padding="8dp"
         app:cardCornerRadius="8dp"
@@ -122,7 +122,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@android:color/white"
                 android:drawablePadding="8dp"
                 android:gravity="center_vertical"
                 android:textColor="@color/black"
@@ -139,7 +139,7 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="32dp"
         android:layout_marginEnd="16dp"
-        android:background="@color/white"
+        android:background="@android:color/white"
         android:padding="8dp"
         android:alpha="0.5"
         app:cardCornerRadius="8dp"
@@ -161,7 +161,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@color/white"
+                android:background="@android:color/white"
                 android:textColor="@color/black"
                 android:textStyle="bold"
                 android:gravity="center_vertical"
