--- a/app/src/main/res/layout/fragment_completed_shift.xml
+++ b/app/src/main/res/layout/fragment_completed_shift.xml
@@ -15,7 +15,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="@string/edit"
-            android:textColor="@color/white"
+            android:textColor="@android:color/white"
             android:textSize="18sp"
             app:layout_constraintTop_toTopOf="parent"
             android:layout_marginTop="32dp"
@@ -188,7 +188,7 @@
             android:padding="24dp"
             android:scaleType="fitXY"
             android:src="@drawable/v_icon"
-            app:tint="@color/white"
+            app:tint="@android:color/white"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent" />
