--- a/app/src/main/res/layout/fragment_monthly_cycle_calculation_setting_layout.xml
+++ b/app/src/main/res/layout/fragment_monthly_cycle_calculation_setting_layout.xml
@@ -15,7 +15,7 @@
         android:layout_height="0dp"
         app:layout_constraintTop_toBottomOf="@id/guideline"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:background="@color/primary_light_blue"/>
+        android:background="@color/cayanSelection"/>
 
     <androidx.constraintlayout.widget.Guideline
         android:id="@+id/guideline"
@@ -39,7 +39,7 @@
         android:layout_margin="24dp"
         tools:text="לא לחשב"
         app:layout_constraintBottom_toTopOf="@id/guideline"
-        android:textColor="@color/white"/>
+        android:textColor="@android:color/white"/>
 
     <TextView
         android:id="@+id/info"
@@ -49,7 +49,7 @@
         android:layout_margin="16dp"
         android:text="@string/breaks_calculation_exp"
         app:layout_constraintBottom_toTopOf="@id/guideline"
-        android:textColor="@color/white"/>
+        android:textColor="@android:color/white"/>
 
     <com.aigestudio.wheelpicker.WheelPicker
         android:id="@+id/cycle_range_picker"
