--- a/app/src/main/res/layout/fragment_payment_setting_layout.xml
+++ b/app/src/main/res/layout/fragment_payment_setting_layout.xml
@@ -7,7 +7,7 @@
     <View
         android:layout_width="match_parent"
         android:layout_height="0dp"
-        android:background="@color/primary_light_blue"
+        android:background="@color/cayanSelection"
         app:layout_constraintBottom_toTopOf="@id/guideline"
         app:layout_constraintTop_toTopOf="parent">
 
