--- a/app/src/main/res/layout/fragment_travel_expenses_setting_layout.xml
+++ b/app/src/main/res/layout/fragment_travel_expenses_setting_layout.xml
@@ -16,7 +16,7 @@
         android:checked="false"
         app:layout_constraintBottom_toTopOf="@id/payment"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:thumbTint="@color/primary_light_blue" />
+        app:thumbTint="@color/cayanSelection" />
 
 
     <TextView
@@ -26,7 +26,7 @@
         android:layout_marginRight="24dp"
         android:layout_marginBottom="16dp"
         android:text="@string/shekel_per_month"
-        android:textColor="@color/primary_light_blue"
+        android:textColor="@color/cayanSelection"
         app:layout_constraintBottom_toBottomOf="@id/calculate_toggle"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="@id/calculate_toggle"/>
@@ -39,7 +39,7 @@
         android:background="@null"
         android:inputType="numberDecimal"
         android:letterSpacing="0.05"
-        android:textColor="@color/primary_light_blue"
+        android:textColor="@color/cayanSelection"
         android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@+id/info_tv"
         app:layout_constraintEnd_toEndOf="parent"
@@ -52,7 +52,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
         android:text="@string/shekel_per_month"
-        android:textColor="@color/primary_light_blue"
+        android:textColor="@color/cayanSelection"
         app:layout_constraintBottom_toTopOf="@+id/cycle_segments"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -71,7 +71,7 @@
         segmentedgroup:sc_border_width="2dp"
         segmentedgroup:sc_checked_text_color="@color/primary_gray"
         segmentedgroup:sc_corner_radius="10dp"
-        segmentedgroup:sc_tint_color="@color/white">
+        segmentedgroup:sc_tint_color="@android:color/white">
         <RadioButton
             android:id="@+id/per_month"
             style="@style/RadioButton"
