--- a/app/src/main/res/layout/rate_per_day_header_single_item_layout.xml
+++ b/app/src/main/res/layout/rate_per_day_header_single_item_layout.xml
@@ -13,7 +13,7 @@
         android:textSize="18sp"
         android:layout_margin="16dp"
         tools:text ="22:53"
-        android:textColor="@color/primary_light_blue"
+        android:textColor="@color/cayanSelection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -26,7 +26,7 @@
         android:layout_height="wrap_content"
         android:textSize="18sp"
         android:text="@string/exit"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"/>
