--- a/app/src/main/res/layout/single_notification_setting_item_layout.xml
+++ b/app/src/main/res/layout/single_notification_setting_item_layout.xml
@@ -16,7 +16,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary_light_blue" />
+        app:tint="@color/cayanSelection" />
 
 
     <TextView
@@ -25,12 +25,12 @@
         android:layout_height="wrap_content"
         android:layout_marginStart="16dp"
         android:src="@drawable/ic_arrow_back_black_24dp"
-        android:textColor="@color/white"
+        android:textColor="@android:color/white"
         android:textSize="16sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintRight_toLeftOf="@+id/icon"
         app:layout_constraintTop_toTopOf="parent"
-        app:tint="@color/primary_light_blue"
+        app:tint="@color/cayanSelection"
         tools:text="value" />
 
 
@@ -40,7 +40,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginLeft="16dp"
-        app:thumbTint="@color/primary_light_blue"
+        app:thumbTint="@color/cayanSelection"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"/>
