--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -4,8 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/darkestBlue"
-    android:fitsSystemWindows="true">
+    android:background="@color/darkestBlue">
 
     <View
         android:layout_width="match_parent"
@@ -41,8 +40,8 @@
                 android:layout_height="56dp"
                 android:layout_gravity="right"
                 android:background="@android:color/transparent"
-                android:gravity="right"
                 android:elevation="0dp"
+                android:gravity="right"
                 android:paddingStart="16dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
@@ -71,8 +70,8 @@
                         android:textColor="@android:color/white"
                         android:textSize="26sp"
                         android:textStyle="bold"
-                        app:layout_constraintRight_toRightOf="parent"
                         app:layout_constraintBottom_toBottomOf="parent"
+                        app:layout_constraintRight_toRightOf="parent"
                         tools:text="ABCS" />
 
                     <ImageView
