--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -47,48 +47,22 @@
                 android:paddingStart="16dp"
                 app:layout_collapseMode="pin"
                 app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
-                app:titleTextColor="@android:color/white"/>
+                app:titleTextColor="@android:color/white" />
 
             <FrameLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:fitsSystemWindows="true"
                 app:layout_collapseMode="parallax">
 
-                <androidx.constraintlayout.widget.ConstraintLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
-
-                    <!--                    <TextView-->
-                    <!--                        android:id="@+id/workplace_title"-->
-                    <!--                        android:layout_width="wrap_content"-->
-                    <!--                        android:layout_height="wrap_content"-->
-                    <!--                        android:layout_gravity="bottom"-->
-                    <!--                        android:layout_margin="16dp"-->
-                    <!--                        android:drawableRight="@drawable/ic_white_arrow_down_24"-->
-                    <!--                        android:drawablePadding="4dp"-->
-                    <!--                        android:padding="16dp"-->
-                    <!--                        android:paddingLeft="16dp"-->
-                    <!--                        android:textColor="@android:color/white"-->
-                    <!--                        android:textSize="26sp"-->
-                    <!--                        android:textStyle="bold"-->
-                    <!--                        app:layout_constraintBottom_toBottomOf="parent"-->
-                    <!--                        app:layout_constraintRight_toRightOf="parent"-->
-                    <!--                        tools:text="ABCS" />-->
-
-                    <ImageView
-                        android:id="@+id/more_workplace_opt"
-                        android:layout_width="40dp"
-                        android:layout_height="40dp"
-                        android:layout_marginLeft="24dp"
-                        android:background="@drawable/faded_circle"
-                        android:padding="8dp"
-                        android:src="@drawable/ic_baseline_more_horiz_24"
-                        app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintTop_toTopOf="parent"
-                        app:layout_constraintLeft_toLeftOf="parent"
-                        />
-                </androidx.constraintlayout.widget.ConstraintLayout>
+                <ImageView
+                    android:id="@+id/more_workplace_opt"
+                    android:layout_width="40dp"
+                    android:layout_height="40dp"
+                    android:layout_gravity="center_vertical"
+                    android:layout_marginLeft="24dp"
+                    android:background="@drawable/faded_circle"
+                    android:padding="8dp"
+                    android:src="@drawable/ic_baseline_more_horiz_24" />
 
             </FrameLayout>
 
