--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="darkBlue_faded">#2C2F4B</color>
     <color name="inActiveGrey">#535571</color>
     <color name="timer_text_purple">#BAB9E5</color>
+    <color name="lightBlue_faded">#494C71</color>
     <color name="start_gradient">#37395A</color>
     <color name="end_gradient">#37395A</color>
     <color name="primary_gray">#808080</color>
